rust-regex-dsl_derive/tests/ui/two_strings_regex.rs
pub use rust_regex_dsl::regex;

fn main() {
    let regex = regex!("hello", "world");
    println!("{}", regex);
}